@@ -2,6 +2,8 @@ Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
     - the module is now developed and tested against version R81.10
+    - add API key login support
+      since Checkpoint R80.40, API version 1.6
 
 0.003000  2023-01-10 19:04:01+01:00 Europe/Vienna
     - add where_used method
